# dockdns

./: .devcontainer.json  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  main_.py  pyproject.toml  pytest.ini  requirements.txt  traefik
.github/workflows/: ci.yml  docker-image.yml
app/: main.py
app/agent/: container_watcher.py  dockdns_config.py
app/api/v1/: endpoints.py
app/core/di/: container.py
app/dns/manager/persistence/: dns_state.py
app/dns/manager/pihole/: config.py  pihole_client.py
app/dns/manager/reverse_proxy/: traefik_client.py
app/dns/manager/reverse_proxy/templates/: traefik_router.tmpl
app/domain/: container_wraper.py
app/notifier/: telegram_notifier.py
app/utils/: os_utils.py
tests/: test_container_wraper.py
tests/functional/: conftest.py  logger-config.toml  test_container_wrapper_integration.py
tests/functional/testutils/: logger_utils.py
tests/unit/: conftest.py
tests/unit/app/agent/: test_container_watcher.py
