[tool.poetry]
name = "dockdns"
version = "0.0.1"
description = "Automatic DNS management for Docker containers with Pi-hole"
authors = ["Vitalii Heria <Vitaliy.Gerya@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
docker = "^7.0"
jinja2 = "^3.1.6"
dependency-injector = "^4.48.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
